--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;500;600;700&family=Montserrat:ital,wght@0,300;0,600;1,100&display=swap');
+:root{
+  --dark: #181818;
+  --white: #f3ffff;
+  --mid: rebeccapurple; 
+  --light: #aa49ff;
+  --highlight: #FEE932;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 code {
